[gd_scene load_steps=51 format=3 uid="uid://cy2cns7kcf1si"]

[ext_resource type="Script" path="res://src/main/puzzle/playfield.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://b26ll8bae76ns" path="res://src/main/puzzle/PuzzleTileMap.tscn" id="2"]
[ext_resource type="Script" path="res://src/main/puzzle/line-clearer.gd" id="3"]
[ext_resource type="Script" path="res://src/main/puzzle/box-builder.gd" id="4"]
[ext_resource type="Script" path="res://src/main/puzzle/leaf-poofs.gd" id="5"]
[ext_resource type="AudioStream" uid="uid://bub163ifsxry0" path="res://assets/main/puzzle/line-erase.wav" id="6"]
[ext_resource type="Script" path="res://src/main/puzzle/line-clear-sfx.gd" id="7"]
[ext_resource type="Script" path="res://src/main/puzzle/build-box-sfx.gd" id="8"]
[ext_resource type="AudioStream" uid="uid://byfiit6untvr5" path="res://assets/main/puzzle/line-fall.wav" id="9"]
[ext_resource type="AudioStream" uid="uid://cwls5spy5hgv2" path="res://assets/main/puzzle/build-cake-box.wav" id="10"]
[ext_resource type="AudioStream" uid="uid://6hrpxl3i6pox" path="res://assets/main/puzzle/veg-erase.wav" id="11"]
[ext_resource type="AudioStream" uid="uid://8bc44863b3lu" path="res://assets/main/puzzle/clear-snack-box.wav" id="12"]
[ext_resource type="AudioStream" uid="uid://chgc7es15d1kj" path="res://assets/main/puzzle/clear-cake-box.wav" id="13"]
[ext_resource type="AudioStream" uid="uid://c0nh1kb5p7mqk" path="res://assets/main/puzzle/combo-00.wav" id="14"]
[ext_resource type="AudioStream" uid="uid://cyvydn13p1uy4" path="res://assets/main/puzzle/fanfare1.wav" id="15"]
[ext_resource type="AudioStream" uid="uid://dqfvq226or4o5" path="res://assets/main/puzzle/fanfare2.wav" id="16"]
[ext_resource type="AudioStream" uid="uid://b6q5bjbeh5mge" path="res://assets/main/puzzle/fanfare3.wav" id="17"]
[ext_resource type="Shader" path="res://src/main/puzzle/texture-metaball.gdshader" id="18"]
[ext_resource type="PackedScene" path="res://src/main/puzzle/GoopViewports.tscn" id="19"]
[ext_resource type="Shader" path="res://src/main/puzzle/flat-mix.gdshader" id="20"]
[ext_resource type="StyleBox" path="res://src/main/puzzle/PuzzleHudStyleBox.tres" id="21"]
[ext_resource type="FontFile" uid="uid://djvi5vhe42qcp" path="res://assets/main/ui/font/blogger-sans-medium.otf" id="22"]
[ext_resource type="PackedScene" path="res://src/main/puzzle/LeafPoof.tscn" id="23"]
[ext_resource type="Script" path="res://src/main/puzzle/tutorial-keybinds-label.gd" id="24"]
[ext_resource type="Script" path="res://src/main/puzzle/line-inserter.gd" id="25"]
[ext_resource type="PackedScene" path="res://src/main/puzzle/Pickup.tscn" id="26"]
[ext_resource type="Script" path="res://src/main/puzzle/pickups.gd" id="27"]
[ext_resource type="AudioStream" uid="uid://donoib8cgcls5" path="res://assets/main/puzzle/pickup.wav" id="28"]
[ext_resource type="Script" path="res://src/main/puzzle/line-filler.gd" id="29"]
[ext_resource type="AudioStream" uid="uid://dvdbi38cicvxb" path="res://assets/main/puzzle/tech-move.wav" id="30"]
[ext_resource type="Texture2D" uid="uid://j8fp6gkqebb5" path="res://assets/main/puzzle/playfield-bg.png" id="37"]
[ext_resource type="Script" path="res://src/main/puzzle/combo-tracker.gd" id="61"]
[ext_resource type="Texture2D" uid="uid://bqiy0func6p3f" path="res://assets/main/fuzzy-circle-128.png" id="62"]
[ext_resource type="Texture2D" uid="uid://b0l32ydlcobpj" path="res://assets/main/puzzle/playfield-light.png" id="63"]
[ext_resource type="Script" path="res://src/main/puzzle/playfield-fx.gd" id="64"]

[sub_resource type="ViewportTexture" id="1"]
viewport_path = NodePath("BgGlobViewports/SubViewport")

[sub_resource type="FastNoiseLite" id="2"]
resource_local_to_scene = true
seed = -2097381222
fractal_octaves = 1

[sub_resource type="NoiseTexture2D" id="3"]
width = 1024
height = 1024
seamless = true
noise = SubResource("2")

[sub_resource type="ViewportTexture" id="4"]
viewport_path = NodePath("BgGlobViewports/RainbowViewport")

[sub_resource type="ShaderMaterial" id="5"]
resource_local_to_scene = true
shader = ExtResource("18")
shader_parameter/goop_alpha = 0.6
shader_parameter/noise = SubResource("3")
shader_parameter/goop_texture = SubResource("1")
shader_parameter/rainbow_texture = SubResource("4")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jdnxl"]
resource_local_to_scene = true
shader = ExtResource("20")
shader_parameter/mix_color = Color(1, 1, 1, 0)

[sub_resource type="CanvasItemMaterial" id="7"]
blend_mode = 1

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_v862h"]
texture = ExtResource("63")
texture_region_size = Vector2i(36, 32)
0:0/next_alternative_id = 19
0:0/0 = 0
0:0/7 = 7
0:0/7/modulate = Color(0.956863, 0.466667, 0, 0.752941)
0:0/8 = 8
0:0/8/modulate = Color(1, 0.364706, 0.407843, 0.690196)
0:0/9 = 9
0:0/9/modulate = Color(1, 0.764706, 0.341176, 0.752941)
0:0/10 = 10
0:0/10/modulate = Color(1, 0.964706, 0.607843, 0.627451)
0:0/11 = 11
0:0/11/modulate = Color(0.454902, 0.639216, 0.12549, 0.376471)
0:0/12 = 12
0:0/12/modulate = Color(1, 0, 0, 0.6)
0:0/13 = 13
0:0/13/modulate = Color(1, 0.857143, 0, 0.6)
0:0/14 = 14
0:0/14/modulate = Color(0.285714, 1, 0, 0.6)
0:0/15 = 15
0:0/15/modulate = Color(0, 1, 0.571429, 0.6)
0:0/16 = 16
0:0/16/modulate = Color(0, 0.571428, 1, 0.6)
0:0/17 = 17
0:0/17/modulate = Color(0.285714, 0, 1, 0.6)
0:0/18 = 18
0:0/18/modulate = Color(1, 0, 0.857143, 0.6)

[sub_resource type="TileSet" id="8"]
tile_size = Vector2i(36, 32)
sources/1 = SubResource("TileSetAtlasSource_v862h")

[sub_resource type="CanvasItemMaterial" id="9"]
blend_mode = 1

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gbe7k"]
texture = ExtResource("62")
texture_region_size = Vector2i(128, 128)
0:0/next_alternative_id = 13
0:0/0 = 0
0:0/1 = 1
0:0/1/modulate = Color(0.956863, 0.466667, 0, 0.752941)
0:0/2 = 2
0:0/2/modulate = Color(1, 0.364706, 0.407843, 0.690196)
0:0/3 = 3
0:0/3/modulate = Color(1, 0.764706, 0.341176, 0.752941)
0:0/4 = 4
0:0/4/modulate = Color(1, 0.964706, 0.607843, 0.627451)
0:0/5 = 5
0:0/5/modulate = Color(0.454902, 0.639216, 0.12549, 0.376471)
0:0/6 = 6
0:0/6/modulate = Color(1, 0, 0, 0.6)
0:0/7 = 7
0:0/7/modulate = Color(1, 0.857143, 0, 0.6)
0:0/8 = 8
0:0/8/modulate = Color(0.285714, 1, 0, 0.6)
0:0/9 = 9
0:0/9/modulate = Color(0, 1, 0.571429, 0.6)
0:0/10 = 10
0:0/10/modulate = Color(0, 0.571428, 1, 0.6)
0:0/11 = 11
0:0/11/modulate = Color(0.285714, 0, 1, 0.6)
0:0/12 = 12
0:0/12/modulate = Color(1, 0, 0.857143, 0.6)

[sub_resource type="TileSet" id="10"]
tile_size = Vector2i(36, 32)
sources/1 = SubResource("TileSetAtlasSource_gbe7k")

[sub_resource type="CanvasItemMaterial" id="11"]
blend_mode = 1

[sub_resource type="ViewportTexture" id="12"]
viewport_path = NodePath("TileMapClip/TileMap/ShadowViewport")

[sub_resource type="ViewportTexture" id="14"]
viewport_path = NodePath("TileMapClip/TileMap/GhostPieceViewport")

[node name="Playfield" type="Control" groups=["night_mode_invisible"]]
layout_mode = 3
anchors_preset = 0
offset_right = 324.0
offset_bottom = 544.0
script = ExtResource("1")

[node name="BgGlobViewports" parent="." instance=ExtResource("19")]
anchors_preset = 0
offset_right = 324.0
offset_bottom = 544.0
glob_max_scale = 1.5

[node name="BgSprite" type="TextureRect" parent="."]
material = SubResource("5")
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("37")
expand_mode = 1

[node name="BgColor" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 324.0
offset_bottom = 544.0
color = Color(0, 0, 0, 0.627451)

[node name="TileMapClip" type="Control" parent="."]
clip_contents = true
anchors_preset = 0
offset_right = 324.0
offset_bottom = 544.0

[node name="Pickups" type="Control" parent="TileMapClip"]
anchors_preset = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -162.0
offset_top = -272.0
offset_right = 162.0
offset_bottom = 272.0
script = ExtResource("27")
puzzle_tile_map_path = NodePath("../TileMap")
PickupScene = ExtResource("26")

[node name="Visuals" type="Control" parent="TileMapClip/Pickups"]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PickupSfx0" type="AudioStreamPlayer" parent="TileMapClip/Pickups"]
stream = ExtResource("28")
pitch_scale = 0.5

[node name="PickupSfx1" type="AudioStreamPlayer" parent="TileMapClip/Pickups"]
stream = ExtResource("28")
pitch_scale = 0.54

[node name="PickupSfx2" type="AudioStreamPlayer" parent="TileMapClip/Pickups"]
stream = ExtResource("28")
pitch_scale = 0.58

[node name="PickupSfx3" type="AudioStreamPlayer" parent="TileMapClip/Pickups"]
stream = ExtResource("28")
pitch_scale = 0.62

[node name="PickupSfx4" type="AudioStreamPlayer" parent="TileMapClip/Pickups"]
stream = ExtResource("28")
pitch_scale = 0.66

[node name="PickupSfx5" type="AudioStreamPlayer" parent="TileMapClip/Pickups"]
stream = ExtResource("28")
pitch_scale = 0.7

[node name="CollectSfxTimer" type="Timer" parent="TileMapClip/Pickups"]
wait_time = 0.04
one_shot = true

[node name="TileMap" parent="TileMapClip" instance=ExtResource("2")]
z_index = 4
material = SubResource("ShaderMaterial_jdnxl")
position = Vector2(0, -96)

[node name="PlayfieldFx" type="Node2D" parent="TileMapClip"]
position = Vector2(0, -96)
script = ExtResource("64")
combo_tracker_path = NodePath("../../ComboTracker")

[node name="LightMap" type="TileMap" parent="TileMapClip/PlayfieldFx"]
material = SubResource("7")
tile_set = SubResource("8")
format = 2
layer_0/tile_data = PackedInt32Array(65538, 1, 0, 131074, 1, 0, 1179648, 1, 458752, 1114113, 1, 458752, 1179650, 1, 458752, 1245185, 1, 458752, 1245187, 1, 458752, 1114115, 1, 458752, 1179652, 1, 458752, 1114117, 1, 458752, 1245189, 1, 458752, 1179654, 1, 458752, 1114119, 1, 458752, 1245191, 1, 458752, 1179656, 1, 458752)

[node name="GlowMap" type="TileMap" parent="TileMapClip/PlayfieldFx"]
z_index = 3
material = SubResource("9")
tile_set = SubResource("10")
format = 2
layer_0/tile_data = PackedInt32Array(1048576, 1, 786432, 983041, 1, 786432, 1048578, 1, 786432, 983043, 1, 786432, 1048580, 1, 786432, 983045, 1, 786432, 1048582, 1, 786432, 983047, 1, 786432, 1048584, 1, 786432, 917512, 1, 786432, 917510, 1, 786432, 917508, 1, 786432, 917506, 1, 786432, 917504, 1, 786432)

[node name="BgStrobe" type="ColorRect" parent="TileMapClip/PlayfieldFx"]
material = SubResource("11")
offset_top = 96.0
offset_right = 324.0
offset_bottom = 640.0
color = Color(0, 0, 0, 0)

[node name="LeafPoofs" type="Node2D" parent="TileMapClip"]
z_index = 5
position = Vector2(0, -96)
script = ExtResource("5")
LeafPoofScene = ExtResource("23")
puzzle_tile_map_path = NodePath("../TileMap")

[node name="ShadowTexture" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.313726)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource("12")

[node name="GhostPieceTexture" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.235294)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource("14")

[node name="TutorialKeybindsLabel" type="RichTextLabel" parent="."]
modulate = Color(1, 1, 1, 0.392157)
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -119.0
offset_top = 86.0
offset_right = 119.0
offset_bottom = 176.0
theme_override_fonts/normal_font = ExtResource("22")
theme_override_font_sizes/normal_font_size = 18
theme_override_styles/normal = ExtResource("21")
text = "Arrows: Move
Down: Soft drop
Space: Hard drop
Z, X: Rotate"
scroll_active = false
script = ExtResource("24")

[node name="ComboTracker" type="Node" parent="."]
script = ExtResource("61")

[node name="Fanfare1" type="AudioStreamPlayer" parent="ComboTracker"]
stream = ExtResource("15")
volume_db = -4.0
bus = &"Sound Bus"

[node name="Fanfare2" type="AudioStreamPlayer" parent="ComboTracker"]
stream = ExtResource("16")
volume_db = -4.0
bus = &"Sound Bus"

[node name="Fanfare3" type="AudioStreamPlayer" parent="ComboTracker"]
stream = ExtResource("17")
volume_db = -4.0
bus = &"Sound Bus"

[node name="BoxBuilder" type="Node" parent="."]
script = ExtResource("4")
tile_map_path = NodePath("../TileMapClip/TileMap")

[node name="LineClearer" type="Node" parent="."]
script = ExtResource("3")
tile_map_path = NodePath("../TileMapClip/TileMap")

[node name="LineFallSound" type="AudioStreamPlayer" parent="LineClearer"]
stream = ExtResource("9")
bus = &"Sound Bus"

[node name="LineClearSfx" type="Node" parent="."]
script = ExtResource("7")

[node name="LineEraseSound1" type="AudioStreamPlayer" parent="LineClearSfx"]
stream = ExtResource("6")
bus = &"Sound Bus"

[node name="LineEraseSound2" type="AudioStreamPlayer" parent="LineClearSfx"]
stream = ExtResource("6")
volume_db = -6.0
bus = &"Sound Bus"

[node name="LineEraseSound3" type="AudioStreamPlayer" parent="LineClearSfx"]
stream = ExtResource("6")
volume_db = -10.0
bus = &"Sound Bus"

[node name="VegEraseSound1" type="AudioStreamPlayer" parent="LineClearSfx"]
stream = ExtResource("11")
bus = &"Sound Bus"

[node name="VegEraseSound2" type="AudioStreamPlayer" parent="LineClearSfx"]
stream = ExtResource("11")
volume_db = -6.0
bus = &"Sound Bus"

[node name="VegEraseSound3" type="AudioStreamPlayer" parent="LineClearSfx"]
stream = ExtResource("11")
volume_db = -10.0
bus = &"Sound Bus"

[node name="ClearSnackPieceSound" type="AudioStreamPlayer" parent="LineClearSfx"]
stream = ExtResource("12")
volume_db = -4.0
bus = &"Sound Bus"

[node name="ClearCakePieceSound" type="AudioStreamPlayer" parent="LineClearSfx"]
stream = ExtResource("13")
volume_db = -4.0
bus = &"Sound Bus"

[node name="ComboSound" type="AudioStreamPlayer" parent="LineClearSfx"]
stream = ExtResource("14")
bus = &"Sound Bus"

[node name="AllClearSound" type="AudioStreamPlayer" parent="LineClearSfx"]
stream = ExtResource("30")
volume_db = -6.0
bus = &"Sound Bus"

[node name="LineInserter" type="Node" parent="."]
script = ExtResource("25")
tile_map_path = NodePath("../TileMapClip/TileMap")

[node name="LineInsertSound" type="AudioStreamPlayer" parent="LineInserter"]
stream = ExtResource("6")
bus = &"Sound Bus"

[node name="BuildBoxSfx" type="Node" parent="."]
script = ExtResource("8")

[node name="BuildCakeBoxSound" type="AudioStreamPlayer" parent="BuildBoxSfx"]
stream = ExtResource("10")
bus = &"Sound Bus"

[node name="BuildSnackBoxSound" type="AudioStreamPlayer" parent="BuildBoxSfx"]
bus = &"Sound Bus"

[node name="LineFiller" type="Node" parent="."]
script = ExtResource("29")
pickups_path = NodePath("../TileMapClip/Pickups")
tile_map_path = NodePath("../TileMapClip/TileMap")

[node name="LineFillSound1" type="AudioStreamPlayer" parent="LineFiller"]
stream = ExtResource("6")
volume_db = -12.0
bus = &"Sound Bus"

[node name="LineFillSound2" type="AudioStreamPlayer" parent="LineFiller"]
stream = ExtResource("6")
volume_db = -15.0
bus = &"Sound Bus"

[node name="LineFillSound3" type="AudioStreamPlayer" parent="LineFiller"]
stream = ExtResource("6")
volume_db = -17.0
bus = &"Sound Bus"

[node name="LineFillSfxResetTimer" type="Timer" parent="LineFiller"]
wait_time = 0.3
one_shot = true

[connection signal="all_lines_cleared" from="." to="LineClearSfx" method="_on_Playfield_all_lines_cleared"]
[connection signal="before_line_cleared" from="." to="TileMapClip/PlayfieldFx" method="_on_Playfield_before_line_cleared"]
[connection signal="before_line_cleared" from="." to="TileMapClip/LeafPoofs" method="_on_Playfield_before_line_cleared"]
[connection signal="before_line_cleared" from="." to="ComboTracker" method="_on_Playfield_before_line_cleared"]
[connection signal="before_line_cleared" from="." to="LineClearSfx" method="_on_Playfield_before_line_cleared"]
[connection signal="blocks_prepared" from="." to="LineClearer" method="_on_Playfield_blocks_prepared"]
[connection signal="box_built" from="." to="TileMapClip/PlayfieldFx" method="_on_Playfield_box_built"]
[connection signal="box_built" from="." to="ComboTracker" method="_on_Playfield_box_built"]
[connection signal="box_built" from="." to="BuildBoxSfx" method="_on_Playfield_box_built"]
[connection signal="line_cleared" from="." to="ComboTracker" method="_on_Playfield_line_cleared"]
[connection signal="line_deleted" from="." to="TileMapClip/Pickups" method="_on_Playfield_line_deleted"]
[connection signal="line_erased" from="." to="TileMapClip/Pickups" method="_on_Playfield_line_erased"]
[connection signal="line_erased" from="." to="LineClearSfx" method="_on_Playfield_line_erased"]
[connection signal="line_filled" from="." to="TileMapClip/Pickups" method="_on_Playfield_line_filled"]
[connection signal="line_filled" from="." to="LineClearer" method="_on_Playfield_line_filled"]
[connection signal="line_inserted" from="." to="TileMapClip/Pickups" method="_on_Playfield_line_inserted"]
[connection signal="line_inserted" from="." to="LineClearer" method="_on_Playfield_line_inserted"]
[connection signal="food_spawned" from="TileMapClip/Pickups" to="." method="_on_Pickups_food_spawned"]
[connection signal="timeout" from="TileMapClip/Pickups/CollectSfxTimer" to="TileMapClip/Pickups" method="_on_PickupSfxTimer_timeout"]
[connection signal="after_boxes_built" from="BoxBuilder" to="." method="_on_BoxBuilder_after_boxes_built"]
[connection signal="box_built" from="BoxBuilder" to="." method="_on_BoxBuilder_box_built"]
[connection signal="box_built" from="BoxBuilder" to="LineClearer" method="_on_BoxBuilder_box_built"]
[connection signal="after_lines_deleted" from="LineClearer" to="." method="_on_LineClearer_after_lines_deleted"]
[connection signal="after_lines_deleted" from="LineClearer" to="LineFiller" method="_on_LineClearer_after_lines_deleted"]
[connection signal="all_lines_cleared" from="LineClearer" to="." method="_on_LineClearer_all_lines_cleared"]
[connection signal="before_line_cleared" from="LineClearer" to="." method="_on_LineClearer_before_line_cleared"]
[connection signal="line_cleared" from="LineClearer" to="." method="_on_LineClearer_line_cleared"]
[connection signal="line_clears_scheduled" from="LineClearer" to="." method="_on_LineClearer_line_clears_scheduled"]
[connection signal="line_deleted" from="LineClearer" to="." method="_on_LineClearer_line_deleted"]
[connection signal="line_erased" from="LineClearer" to="." method="_on_LineClearer_line_erased"]
[connection signal="line_inserted" from="LineInserter" to="." method="_on_LineInserter_line_inserted"]
[connection signal="after_lines_filled" from="LineFiller" to="." method="_on_LineFiller_after_lines_filled"]
[connection signal="line_filled" from="LineFiller" to="." method="_on_LineFiller_line_filled"]
[connection signal="timeout" from="LineFiller/LineFillSfxResetTimer" to="LineFiller" method="_on_LineFillSfxResetTimer_timeout"]
